--- a/lesson1/index.html
+++ b/lesson1/index.html
@@ -11,7 +11,7 @@
     <h1>Вілл Сміт</h1>
     <img src="images/250px-TechCrunch_Disrupt_2019_(48834434641)_(cropped).jpg" alt="Вілл Сміт">
     <p><b>Ві́ллард Крі́стофер Сміт</b> молодший — американський актор, співак у стилі хіп-хоп. Дворазовий номінант на премію
-        <u>«Оскар»</u>, п'ятиразовий – на премію <u>«Золотий глобус»</u>. За підсумками 2019 року перебуває на 8-му місці
+        <u>«Оскар»</u>, пятиразовий – на премію <u>«Золотий глобус»</u>. За підсумками 2019 року перебуває на 8-му місці
         рейтингу Forbes серед найбільш високооплачуваних акторів; його заробіток склав $44,5 млн.</p>
     <h2>Біографія</h2>
     <p>Народився <b>Віллард Крістофер «Вілл» Сміт</b> молодший у <i>Філадельфії</i> (Пенсильванія, США) <u>25 вересня 1968
@@ -81,9 +81,9 @@
         </li>
         <li>2008
             <ul>
-                <il><b>Премія каналу «MTV»</b>,
+                <li><b>Премія каналу «MTV»</b>,
                     Переможець: Краща чоловіча роль (<i>«Я - легенда»</i>)
-                </il>
+                </li>
             </ul>
         </li>
         <li>2009
