--- a/home/home6/index.html
+++ b/home/home6/index.html
@@ -83,12 +83,12 @@
         </div>
         <div class="header__description_card">
             <div class="card__img"><img src="image/Mask%20Group.png" alt="mask"></div>
-            <h3>Найкраща якість їжі</h3>
+            <h3>Найкраща якість <span>Їжі</span></h3>
             <p>Якість нашої <br>Їжі- чудова!</p>
         </div>
         <div class="header__description_card">
             <div class="card__img"><img src="image/Mask%20Group.png" alt="mask"></div>
-            <h3>Недорога їжа</h3>
+            <h3>Недорога <span>Їжа</span></h3>
             <p>
                 Вартість нашої їжі залежить тільки від неї кількості. Якість
                 завжди на висоті!
