--- a/home/home6/index.html
+++ b/home/home6/index.html
@@ -95,6 +95,33 @@
             </p>
         </div>
     </div>
+
+</div>
+
+<div class="history wrapper">
+
+    <div class="history__text">
+        <h2>Наша <span>історія</span></h2>
+        <p>
+            Як і в будь-якого іншого самобутнього місця, ми маємо свою, особливу історію. Ідея ресторану прийшла
+            засновникам несподівано. Під час прогулянки лісом творець нашого ресторану застряг за сотні кілометрів від
+            найближчого населеного пункту. Вдалині від цивілізації і зв'язку їм довелося вчасно облаштувати собі
+            нехитрий побут, добувати і готувати собі їжу.
+        </p>
+        <div class="history__food">
+            <p><span>93</span><br>Напої</p>
+            <p><span>206</span><br>Їжа</p>
+            <p><span>71</span><br>Закуски</p>
+        </div>
+    </div>
+
+    <div class="history__photo">
+        <div class="photo_1"><img src="image/design%20box.png" alt="desing"></div>
+        <div class="photo_2"><img src="image/430%201.png" alt="430"></div>
+        <div class="photo_3"><img src="image/255%201.png" alt="aaa"></div>
+        <div class="photo_4"><img src="image/233%5D%201.png" alt="sdsff"></div>
+    </div>
+
 </div>
 
 </body>
